# Omar-Fayed-Portfolio

./: .gitmodules  README.md
Convolution on Matlab/: Part_3.m  README.md  convu.m  dft.m  disc2.m  discrete.m  iV.m  matlab screenshots.docx  p.m  partthree.m  qi.m  qii.m  qiii.m  trial.m  untitlediscretefinal.m
Cramer's Rule solution in C++/: README.md  Solver_in_C++.cpp  Solver_in_matlab.m
Distributed Picture Sending System/: README.md
Distributed Picture Sending System/Client/: Cargo.toml  main.rs
Distributed Picture Sending System/Servers/Server1/: Cargo.toml  main.rs
IOT Smart Home System/: README.md
Premier League Database WebScrapping/: READEME.md  README.md  dbs.py  import club only.py  import clubs.py  import time.py  matches only.py  matches2.py  milestoneii_clubs.sql  milestoneii_fans.sql  milestoneii_match.sql  milestoneii_review.sql  milestoneii_squad.sql  milestoneii_stadiums.sql  playersseasons.py  stadims.py  test_connection.py
Risc-V Assembly Simulator/: README.md  array sum.txt  finds max.txt  logic gates.txt  multiply.txt  powers of 2.txt  project.cpp  read.cpp  string size.txt  swap2.txt  test.txt  trialcpp.cpp
Risc-V pipeline simulator/: BCD.v  DFlipFlop.v  FSDD.v  README.md  SingleCycletb.xdc  TOP.v  adder.v  alucontrol.v  branch.v  clock_divider.v  controlUnit.v  forwardingUnit.v  mux.v  mux4to1.v  nbitreg.v  newDM.v  pipeline.v  pipelineTB.v  prv32_ALU.v  regfile.v  rv32ImmGen.v
Rust Disk Analyzer/: README.md
Simulated Annealing placer/: README.md  SAgraph.txt  Source.cpp  newcodeundo.txt  shortest.txt
(+20 files in other folders)
