[package]
name = "udpsender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
fltk = { version = "^1.4", features = ["fltk-bundled"] }
image = "0.24.1"
rand = "0.8.5"
steganography = "1.0.2"
tokio-util = "0.6"
minifb = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
csv = "1.0"