[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1.0"
fltk = { version = "^1.4", features = ["fltk-bundled"] }
image = "0.21.0"
rand = "0.8.5"
steganography = "1.0.2"